--- a/HalloDocWeb/Views/Home/SubmitRequestSomeone.cshtml
+++ b/HalloDocWeb/Views/Home/SubmitRequestSomeone.cshtml
@@ -60,7 +60,7 @@
 </div>
 
 
-<form method="post" asp-action="SubmitRequestSomeone" asp-controller="Aspnetusers">
+<form method="post" asp-action="SubmitRequestSomeone" asp-controller="Home">
     <div class="container bg-white rounded mt-3">   
         <div class="row">
             <div class="col-12 h3 mb-3 mt-3">
