--- a/HalloDocWeb/Views/Home/SubmitRequestOnMe.cshtml
+++ b/HalloDocWeb/Views/Home/SubmitRequestOnMe.cshtml
@@ -58,7 +58,7 @@
         </div>
     </div>
 </div>
-<form method="post" asp-action="SubmitRequestOnMe" asp-controller="Aspnetusers" method="post" enctype="multipart/form-data">
+<form method="post" asp-action="SubmitRequestOnMe" asp-controller="Home" method="post" enctype="multipart/form-data">
     <div class="container bg-white rounded mt-3">
         <div class="row">
             <div class="col-12 h3 mb-3 mt-3">
