--- a/HalloDocWeb/wwwroot/css/style.css
+++ b/HalloDocWeb/wwwroot/css/style.css
@@ -133,6 +133,9 @@ nav ul:first-child li:first-child{
     }
 
     .showonmobile {
+        display: block !important;
+    }
+    .showonviewupload {
         display: flex !important;
     }
 }
