--- a/HalloDocWeb/Views/Admin/ViewUploadAdmin.cshtml
+++ b/HalloDocWeb/Views/Admin/ViewUploadAdmin.cshtml
@@ -10,20 +10,20 @@
                     </button>
                 </a>
             </div>
-            <div class="row bg-white rounded-4  shadow-lg">
+            <div class="row bg-white rounded-4 shadow-lg">
             <span class="mt-3">Patient Name</span>
             <h5 class="text-info">@Model.patientData.Firstname @Model.patientData.Lastname</h5>
             <h4 class="text-info mb-2"><span class="text-secondary">(@Model.confirmationDetail.Confirmationnumber)</span></h4>
             <p class="mb-4 text-muted">Check here to review and add files that you or Client/Member has attached to the Request.</p>
-            <form enctype="multipart/form-data">
+                <form asp-action="UploadFilebyadmin" asp-controller="Admin" asp-route-id="@ViewBag.Id" enctype="multipart/form-data">
                 <fieldset id="upload">
                     <div class="input-group mb-3">
-                        <input type="file" class="form-control" id="inputGroupFile02" name="File" >
+                            <input type="file" class="form-control" id="inputGroupFile02" name="fileToUpload">
                         <label class="input-group-text text-muted p-0" for="inputGroupFile02">
-                            <label class="btn btn-info mx-0">
+                            <button class="btn btn-info mx-0">
                                 <i class="fa-solid fa-cloud-arrow-up" style="color: #ffffff;"></i>
                                 Upload
-                            </label>
+                            </button>
                         </label>
                     </div>
                 </fieldset>
@@ -31,20 +31,21 @@
             <div class="d-flex justify-content-between align-items-center my-4 hideonmobile">
                 <span class="h4">Documents</span>
                 <div class="text-end pb-3">
-                    <button class="btn btn-white text-info border-info" type="button">Download All</button>
-                    <button class="btn btn-white text-info border-info" type="button">Delete All</button>
-                    <button class="btn btn-white text-info border-info" type="button">Send Mail</button>
+                        <a onclick="downloadFile()"><button class="btn btn-white text-info border-info" type="button">Download All</button></a>
+                        <a onclick="deleteFile()"><button class="btn btn-white text-info border-info" type="button">Delete All</button></a>
+                    <a onclick="sendMail()"><button class="btn btn-white text-info border-info" type="button">Send Mail</button></a>
                 </div>
             </div>
-                <div class="showonmobile hide d-flex  justify-content-between ">
+                <div class="showonviewupload hide d-flex  justify-content-between ">
                     <div class="h4">Documents</div>
-                <div class="pb-3">
-                    <button class="btn btn-white text-info border-info" type="button"><i class="fa-solid fa-cloud-arrow-down" style="color: #54B4D3;"></i></button>
-                    <button class="btn btn-white text-info border-info" type="button"><i class="fa-regular fa-trash-can"></i></button>
-                    <button class="btn btn-white text-info border-info" type="button">
-                        <i class="fa-regular fa-envelope"></i>
-                    </button>
-                </div>
+                    <div class="pb-3">
+                        <a onclick="downloadFile()"><button class="btn btn-white text-info border-info" type="button"><i class="fa-solid fa-cloud-arrow-down"></i></button></a>
+                        <a onclick="deleteFile()"><button class="btn btn-white text-info border-info" type="button"><i class="fa-regular fa-trash-can"></i></button></a>
+                        <a asp-action="SendMail" asp-controller="Admin" asp-route-id="@Model.confirmationDetail.Requestid"><button class="btn btn-white text-info border-info" type="button">
+                            <i class="fa-regular fa-envelope"></i>
+                            </button>
+                        </a>
+                    </div>
             </div>
             <div class="col bg-white">
                 <table class="table table-hover">
@@ -62,7 +63,7 @@
                         {
                         <tr>
                             <td>
-                            <input type="checkbox" class="Subcheckbox" style="width:20px;height:20px">
+                                        <input type="checkbox" class="Subcheckbox" style="width:20px;height:20px" data-filename="@item.Filename">
                             </td>
                             <td>
                                 @item.Filename
@@ -71,7 +72,7 @@
                                 @item.Createddate
                             </td>
                             <td>
-                                <a><button class="btn btn-outline-info me-2"><i class="fa-solid fa-cloud-arrow-down" style="color: #54B4D3;"></i></button></a>
+                                <a asp-action="DownloadFile" asp-controller="Admin" asp-route-id="@item.Requestwisefileid"><button class="btn btn-outline-info me-2"><i class="fa-solid fa-cloud-arrow-down" style="color: #54B4D3;"></i></button></a>
                                 <a asp-action="DeleteFile" asp-controller="Admin" asp-route-id="@item.Requestwisefileid"> <button class="btn btn-outline-info"><i class="fa-regular fa-trash-can"></i></button></a>
                             </td>
                         </tr>
@@ -93,5 +94,84 @@
                 checkbox.checked = mainCheckbox.checked;
             });
         });
+    }
+    function downloadFile() {
+        var checkboxes = document.querySelectorAll('.Subcheckbox:checked');
+        var filenames = [];
+
+        checkboxes.forEach(function (checkbox) {
+            filenames.push(checkbox.getAttribute('data-filename'));
+        });
+
+        if (filenames.length > 0) {
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', '/Admin/DownloadAll/@Model.confirmationDetail.Requestid', true);
+            xhr.setRequestHeader('Content-Type', 'application/json');
+            xhr.responseType = 'blob';
+            xhr.onload = function () {
+                if (this.status === 200) {
+                    var blob = new Blob([this.response], { type: 'application/octet-stream' });
+                    var link = document.createElement('a');
+                    link.href = window.URL.createObjectURL(blob);
+                    link.download = 'download.zip';
+                    link.click();
+                }
+            };
+            xhr.send(JSON.stringify(filenames));
+        } else {
+            alert('Please select one or more files to download.');
+        }
+    }
+    function sendMail() {
+        var checkboxes = document.querySelectorAll('.Subcheckbox:checked');
+        var filenames = [];
+
+        checkboxes.forEach(function (checkbox) {
+            filenames.push(checkbox.getAttribute('data-filename'));
+        });
+
+        if (filenames.length > 0) {
+            $.ajax({
+                url: "/Admin/SendMail",
+                data: { 'id': @Model.confirmationDetail.Requestid, 'filenames': filenames },
+                type: "POST",
+                dataType: "html",
+                success: function (data) {
+                    window.location.reload();
+                },
+                error: function () {
+                    alert("No Projects Found");
+                    // $("#tableContent").html('An error has occurred');
+                }
+            });
+
+        } else {
+            alert('Please select one or more files to download.');
+        }
+    }
+    function deleteFile() {
+        var checkboxes = document.querySelectorAll('.Subcheckbox:checked');
+        var reqids = [];
+
+        checkboxes.forEach(function (checkbox) {
+            reqids.push(checkbox.getAttribute('data-filename'));
+        });
+        if (reqids.length > 0) {
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', '/Admin/DeleteAll/@Model.confirmationDetail.Requestid', true);
+            xhr.setRequestHeader('Content-Type', 'application/json');
+            xhr.responseType = 'json';
+            xhr.onload = function () {
+                if (this.status === 200) {
+
+                    window.location.reload();
+                }
+
+            };
+            xhr.send(JSON.stringify(reqids));
+        }
+        else {
+            alert('Please select one or more files to delete.');
+        }
     }
 </script>
