--- a/HalloDocWeb/Views/Admin/_Active.cshtml
+++ b/HalloDocWeb/Views/Admin/_Active.cshtml
@@ -117,8 +117,8 @@
                         <ul class="dropdown-menu position-fixed" aria-labelledby="dropdownMenuButton1">
                             <li><a class="dropdown-item" asp-action="View_Case" asp-controller="Admin" asp-route-id="@item.Requestid"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />View Case</a></li>
                             <li><a class="dropdown-item" asp-action="ViewUploadAdmin" asp-controller="Admin" asp-route-id="@item.Requestid"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />View Uploads</a></li>
-                            <li><a class="dropdown-item" asp-action="View_Note" asp-controller="Admin"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/notebook.png" style="height:15px;" class="me-1" />View Notes</a></li>
-                            <li><a class="dropdown-item" asp-action="Sendorder" asp-controller="Admin"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Orders</a></li>
+                            <li><a class="dropdown-item" asp-action="View_Note" asp-controller="Admin" asp-route-id="@item.Requestid"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/notebook.png" style="height:15px;" class="me-1" />View Notes</a></li>
+                            <li><a class="dropdown-item" asp-action="Sendorder" asp-controller="Admin" asp-route-id="@item.Requestid"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Orders</a></li>
                             <li><a class="dropdown-item"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Doctor Note</a></li>
                             <li><a class="dropdown-item" asp-action="Encounterform" asp-controller="Admin" asp-route-id="@item.Requestid"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/Assign_case.jpg" style="height:15px;" class="me-1" />Encounter</a></li>
                         </ul>
@@ -234,9 +234,24 @@
 <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
 <script>
-
+    // function sendorderpage(element) {
+    //     var id = element.value;
+    //     console.log(id);
+    //     $.ajax({
+    //         url: "/Admin/Sendorder",
+    //         data: { 'id': id},
+    //         type: "GET",
+    //         dataType: "html",
+    //         success: function (data) {
+    //             $("#modalpopup").html(data);
+    //         },
+    //         error: function () {
+    //             alert("No Projects Found");
+    //             $("#tableContent").html('An error has occurred');
+    //         }
+    //     });
+    // };
     $(document).ready(function () {
-
         $('#adminTable').DataTable({
             "initComplete": function (settings, json) {
                 $('#my-search-input').val(settings.oPreviousSearch.sSearch);
