--- a/HalloDocWeb/Views/Admin/_Conclude.cshtml
+++ b/HalloDocWeb/Views/Admin/_Conclude.cshtml
@@ -113,9 +113,9 @@
 
                             <li><a class="dropdown-item" asp-action="View_Note" asp-controller="Admin"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/notebook.png" style="height:15px;" class="me-1" />View Notes</a></li>
                             <li><a class="dropdown-item" asp-action="Sendorder" asp-controller="Admin"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Orders</a></li>
-                            <li><a class="dropdown-item"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Doctor Note</a></li>
+                            @* <li><a class="dropdown-item"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Doctor Note</a></li> *@
 
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal1"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/Assign_case.jpg" style="height:15px;" class="me-1" />Encounter</a></li>
+                            <li><a class="dropdown-item" asp-action="Encounterform" asp-controller="Admin" asp-route-id="@item.Requestid"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/Assign_case.jpg" style="height:15px;" class="me-1" />Encounter</a></li>
                         </ul>
                     </div>
 
