--- a/HalloDocWeb/Views/Admin/_Toclose.cshtml
+++ b/HalloDocWeb/Views/Admin/_Toclose.cshtml
@@ -1,30 +1,4 @@
-﻿<!-- Modal Clear Case To Patient In Pending State-->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-     aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header text-center justify-content-center mb-3">
-                <div class="rounded-circle border border-3 p-1 border-warning shadow ">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#e0bd34"
-                         class="bi bi-exclamation-circle" viewBox="0 0 16 16">
-                        <path fill="#e0bd34" d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
-                        <path fill="#e0bd34" d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z" />
-                    </svg>
-                </div>
-                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
-            </div>
-            <div class="modal-body mb-3 " style="text-align: center;">
-                <div>
-                    <h5 class="modal-title " id="staticBackdropLabel">Confirmation for clear case</h5>
-                </div>
-                Are sure you want to clear this request?Once clear this request then you are not able to see this request.
-            </div>
-            <div class="modal-footer d-flex justify-content-center pb-3">
-                <button type="button" class="btn btn-info text-white " data-bs-dismiss="modal">Clear</button>
-                <button type="button" class="btn btn-white text-info border-info" data-bs-dismiss="modal">Cancel</button>
-            </div>
-        </div>
-    </div>
+﻿<div id="modalpopup">
 </div>
 <div class="row mt-3 d-flex flex-row">
     <div class="text-end d-md-flex hideonmobile justify-content-md-end ">
@@ -143,10 +117,10 @@
 
                             <li><a class="dropdown-item" asp-action="View_Note" asp-controller="Admin"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/notebook.png" style="height:15px;" class="me-1" />View Notes</a></li>
                             <li><a class="dropdown-item" asp-action="Sendorder" asp-controller="Admin" asp-route-id="@item.Requestid"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Orders</a></li>
-                            <li><a class="dropdown-item"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Close Case</a></li>
-                            <li><a class="dropdown-item"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Doctor Note</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Clear Case</a></li>
-                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal1"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/Assign_case.jpg" style="height:15px;" class="me-1" />Encounter</a></li>
+                            <li><a class="dropdown-item" asp-action="Close_case" asp-controller="Admin" asp-route-id="@item.Requestid"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Close Case</a></li>
+                            @* <li><a class="dropdown-item"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Doctor Note</a></li> *@
+                            <li><button class="dropdown-item" onclick="clearcase(this)" value="@item.Requestid" id="clearcase"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/keyword.png" style="height:15px;" class="me-1" />Clear Case</button></li>
+                            <li><a class="dropdown-item" asp-action="Encounterform" asp-controller="Admin" asp-route-id="@item.Requestid"><img src="~/OneDrive_2024-01-17/SRS Screen Shorts/Assign_case.jpg" style="height:15px;" class="me-1" />Encounter</a></li>
                         </ul>
                     </div>
                 </td>
@@ -257,6 +231,23 @@
 <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
 <script>
+    function clearcase(element) {
+        var id = element.value;
+        console.log(id);
+        $.ajax({
+            url: "/Admin/Modalofclear",
+            data: { 'id': id },
+            type: "GET",
+            dataType: "html",
+            success: function (data) {
+                $("#modalpopup").html(data);
+            },
+            error: function () {
+                alert("No Projects Found");
+                $("#tableContent").html('An error has occurred');
+            }
+        });
+    };
     $(document).ready(function () {
         $('#adminTable').DataTable({
             "initComplete": function (settings, json) {
