--- a/HalloDocWeb/Views/Home/Index.cshtml
+++ b/HalloDocWeb/Views/Home/Index.cshtml
@@ -40,3 +40,5 @@
     <footer class="footerset text-lg-center text-center justify-content-center">
         <div class="">Terms Of Conditions <div class="vr fw-bold"></div> Privacy Policy</div>
     </footer>
+
+    <!-- Chaitya -->
